Add knit output to docs folder

--- a/LearnByExample.Rmd
+++ b/LearnByExample.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "Example-Based Data Analysis"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "John Maindonald"
 date: "21/01/2022"
 output: html_document
